<resources>
    <string name="app_name">Hello Toast</string>
    <string name="button_label_toast">Toast</string>
    <string name="count_initial_value">0</string>
    <string name="button_label_count">Count</string>
    <string name="toast_message">ITS OVER 9000!!!</string>
    <string name="button_label_poke">POKE!</string>
    <string name="toast_message_2">Kena Poke dech!</string>
    <string name="button_label_reset">RESET</string>
</resources>
