<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context="com.example.otherguy.hellotoast.MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGreen"
        android:textColor="@android:color/white"
        android:text="@string/button_label_toast"
        android:onClick="showToast" />

    <Button
        android:id="@+id/button_poke"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"
        android:text="@string/button_label_poke"
        android:onClick="showPoke"/>

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="@dimen/count_text_size"
        android:background="@color/myBackgroundColor"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/count_initial_value" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/backgroundGreen"
        android:text="@string/button_label_count"
        android:onClick="countUp" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:onClick="reset"
        android:text="@string/button_label_reset" />
</LinearLayout>
